--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="cssreset.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <meta charset="utf-8">
     <title>Hello World</title>
   </head>
   <body>
+    <header>
+
+    </header>
     <h1>Paige Darlington
     </h1>
   </body>
